## ARActivity.kt
import android.os.Bundle
import androidx.appcompat.app.AppCompatActivity
import cn.easyar.Engine
import android.widget.Toast
import android.util.Log

/**
 * Handles AR functionalities using EasyAR SDK, initializes AR and manages AR session lifecycle.
 */
class ARActivity : AppCompatActivity() {

    companion object {
        // Initialize with your EasyAR API Key
        private const val EASYAR_API_KEY = "Your_EasyAR_API_Key_Here"
    }

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_ar)
        if (!Engine.initialize(this, EASYAR_API_KEY)) {
            handleError("Failed to initialize EasyAR.")
        } else {
            initAR()
        }
    }

    /**
     * Initializes AR components and configurations.
     */
    private fun initAR() {
        // Setup AR scene
        // Load AR assets
        // Configure AR session parameters
        // This is a placeholder for actual AR setup and configuration logic.
        Toast.makeText(this, "AR Initialization Successful", Toast.LENGTH_SHORT).show()
    }

    override fun onResume() {
        super.onResume()
        // Resume the AR session
        // This should include logic to reactivate the camera and AR tracking.
        Toast.makeText(this, "AR Session Resumed", Toast.LENGTH_SHORT).show()
    }

    override fun onPause() {
        super.onPause()
        // Pause the AR session
        // This should include logic to deactivate the camera and AR tracking to save resources.
        Toast.makeText(this, "AR Session Paused", Toast.LENGTH_SHORT).show()
    }

    /**
     * Handles errors during EasyAR SDK initialization and AR session management.
     * @param message The error message to be displayed and logged.
     */
    private fun handleError(message: String) {
        Toast.makeText(this, message, Toast.LENGTH_LONG).show()
        Log.e("ARActivity", message)
        // Consider sending error details to analytics for further investigation and improvement.
        finish() // Close the activity as AR cannot be initialized
    }
}
