## FirebaseManager.kt
import android.util.Log
import com.google.firebase.firestore.FirebaseFirestore
import com.google.firebase.auth.FirebaseAuth
import kotlinx.coroutines.tasks.await

/**
 * Manages Firebase backend services including user data storage and retrieval.
 */
class FirebaseManager {

    private var firestore: FirebaseFirestore = FirebaseFirestore.getInstance()
    private var auth: FirebaseAuth = FirebaseAuth.getInstance()

    /**
     * Initializes Firebase services.
     */
    fun initFirebase() {
        // This function can be expanded to include Firebase configuration settings if required.
        // For now, it ensures that Firebase instances are ready for use.
        // Example: Configure Firebase with custom settings if needed.
    }

    /**
     * Saves user data to Firebase Firestore asynchronously.
     * @param data User data to save.
     */
    suspend fun saveUserData(data: User) {
        try {
            val userId = auth.currentUser?.uid
            userId?.let {
                firestore.collection("users").document(it).set(data).await()
                Log.d("FirebaseManager", "User data successfully saved.")
            } ?: Log.e("FirebaseManager", "Error: User ID is null.")
        } catch (e: Exception) {
            Log.e("FirebaseManager", "Error saving user data: $e")
        }
    }

    /**
     * Fetches user data from Firebase Firestore asynchronously.
     * @param userId The ID of the user whose data is to be fetched.
     * @return User data or null if an error occurs.
     */
    suspend fun fetchUserData(userId: String): User? {
        return try {
            val document = firestore.collection("users").document(userId).get().await()
            if (document.exists()) {
                document.toObject(User::class.java)
            } else {
                Log.d("FirebaseManager", "No such document")
                null
            }
        } catch (e: Exception) {
            Log.e("FirebaseManager", "Error getting documents: $e")
            null
        }
    }
}

/**
 * Data class representing a user.
 * @property userId Unique identifier for the user.
 * @property settings User's settings.
 */
data class User(
    var userId: String = "",
    var settings: Settings = Settings()
)

/**
 * Data class representing user settings.
 * @property volume User's volume setting.
 * @property brightness User's brightness setting.
 */
data class Settings(
    var volume: Int = 50, // Default volume
    var brightness: Int = 50 // Default brightness
)
